--- a/css/style.css
+++ b/css/style.css
@@ -391,4 +391,132 @@ html {
     font-size: 0.92rem;
   }
 }
+
+.daythree {
+  position: relative;
+  width: 25rem;
+  height: 25rem;
+  background-color: skyblue;
+}
+
+.daythree .container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.daythree .container .parent-element {
+  width: 22rem;
+  height: 22rem;
+}
+
+.daythree .container .parent-element .top-element,
+.daythree .container .parent-element .bottom-element {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 50%;
+}
+
+.daythree .container .parent-element .top-element {
+  margin-bottom: 1rem;
+}
+
+.daythree .container .parent-element .child-element {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  border-radius: 8px;
+  background-color: white;
+  opacity: .6;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.daythree .container .parent-element .child-element:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.daythree .container .parent-element .child-element:hover {
+  width: 100%;
+  opacity: 1;
+}
+
+.daythree .container .parent-element .child-element:hover .child-container {
+  bottom: 8px;
+  -webkit-transition: all .8s;
+  transition: all .8s;
+}
+
+.daythree .container .parent-element .child-element:hover .child-container .amount {
+  font-size: 3rem;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.daythree .container .parent-element .child-element:hover .child-container .size {
+  font-size: 1.5rem;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.daythree .container .parent-element .child-element:hover .rectangle {
+  width: 80%;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.daythree .container .parent-element .child-element:hover .circle {
+  background-color: yellowgreen;
+}
+
+.daythree .container .parent-element .child-element .child-container {
+  position: absolute;
+  left: 0;
+  bottom: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  padding-left: 1em;
+}
+
+.daythree .container .parent-element .child-element .child-container .amount {
+  margin-right: .2em;
+  font-size: 2rem;
+}
+
+.daythree .container .parent-element .child-element .child-container .size {
+  font-size: 1rem;
+}
+
+.daythree .container .parent-element .child-element .rectangle {
+  position: absolute;
+  width: 15%;
+  height: 5px;
+  background-color: yellowgreen;
+  left: 1rem;
+  bottom: 10px;
+}
+
+.daythree .container .parent-element .child-element .circle {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  border: 2px solid yellowgreen;
+  right: 1rem;
+  top: 1rem;
+}
 /*# sourceMappingURL=style.css.map */
