--- a/css/style.scss
+++ b/css/style.scss
@@ -368,7 +368,9 @@ html {
     position: relative;
     width: 25rem;
     height: 25rem;
-    background-color: skyblue;
+    margin: 0 auto;
+    // padding-top: 5rem;
+    // background-color: skyblue;
 
 
     .container {
@@ -380,7 +382,6 @@ html {
         .parent-element{
             width: 22rem;
             height: 22rem;
-            // margin: auto;
 
             .top-element,
             .bottom-element{
@@ -388,24 +389,22 @@ html {
                 width: 100%;
                 height: 50%;
             }
+
             .top-element {
                 margin-bottom: $gap;
             }
             
-
-
-
             .child-element {
                 position: relative;
                 width: 50%;
                 height: 100%;
-                // border: 1px solid black;
                 display:flex;
                 align-items: flex-end;
                 border-radius: 8px;
                 background-color: white;
                 opacity: .6;
-                transition: all 1s;
+                transition: all .5s;
+                cursor: pointer;
 
                 &:not(:last-child){
                     margin-right: $gap;
@@ -416,25 +415,26 @@ html {
                     opacity: 1;
                     .child-container {
                         bottom: 8px;
-                        transition: all .8s;
+                        transition: all .4s;
                         .amount{
                             font-size: 3rem;
-                            transition: all 1s;
+                            transition: all .5s;
                         }
                         .size{
                             font-size: 1.5rem;
-                            transition: all 1s;
+                            transition: all .5s;
                         }
                     }
 
                     .rectangle {
                         width: 80%;
-                        transition: all 1s;
+                        transition: all .5s;
                     }
                     .circle {
-                        background-color: yellowgreen;
+                        background-color: skyblue;
                     }
                 }
+                
                 
                 .child-container {
                     position: absolute;
@@ -443,8 +443,6 @@ html {
                     display: flex;
                     align-items: baseline;
                     padding-left: 1em;
-                    // padding-bottom: 2rem;
-                    // position: relative;
 
                     .amount{
                         margin-right: .2em;
@@ -458,7 +456,7 @@ html {
                     position: absolute;
                     width: 15%;
                     height: 5px;
-                    background-color: yellowgreen;
+                    background-color: skyblue;
                     left: 1rem;
                     bottom: 10px;
                 }
@@ -467,17 +465,68 @@ html {
                     width: 10px;
                     height: 10px;
                     border-radius: 10px;
-                    border: 2px solid yellowgreen;
-                    // background-color: red;
+                    border: 2px solid skyblue;
                     right: 1rem;
                     top: 1rem;
                 }
-
-
-                
-
-               
             }
         }
+    }
+}
+body {
+    background-color: skyblue;
+}
+
+
+
+.child-element-active{
+    position: relative;
+    width: 100% ;
+    height: 100%;
+    display:flex;
+    align-items: flex-end;
+    border-radius: 8px;
+    background-color: white;
+    opacity: 1;
+    transition: all .5s;
+    cursor: pointer;
+    margin-right: 1rem;
+    .child-container {
+        position: absolute;
+        left:0;
+        display: flex;
+        align-items: baseline;
+        padding-left: 1em;
+        bottom: 8px ;
+        transition: all .4s ;
+        .amount{
+            margin-right: .2em;
+            font-size: 3rem ;
+            transition: all .5s ;
+        }
+        .size{
+            font-size: 1.5rem ;
+            transition: all .5s ;
+        }
+    }
+
+    .rectangle {
+        position: absolute;
+        height: 5px;
+        background-color: skyblue;
+        left: 1rem;
+        bottom: 10px;
+        width: 80% ;
+        transition: all .5s ;
+    }
+    .circle {
+        background-color: skyblue ;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        border-radius: 10px;
+        border: 2px solid skyblue;
+        right: 1rem;
+        top: 1rem;
     }
 }
